# OpenCV-SampleCode

./: .gitignore  CMakeLists.txt  README.md  cv_2_1_图像入门.ipynb  cv_2_2_视频入门.ipynb  cv_2_3_OpenCV中的绘图功能.ipynb  cv_2_4_鼠标作为画笔.ipynb  cv_2_5_轨迹作为调色栏.ipynb  cv_3_1_图像的基本操作.ipynb  cv_3_2_图像上的算术运算.ipynb  cv_3_3_性能衡量和提升技术.ipynb  cv_4_1_改变颜色空间.ipynb  cv_4_2_图像几何变换.ipynb  cv_4_3_图像阈值.ipynb  cv_4_4_图像平滑.ipynb  cv_4_5_形态转换.ipynb  cv_4_6_图像梯度.ipynb  cv_4_7_Canny边缘检测.ipynb  cv_4_8_图像金字塔.ipynb  cv_4_9_1_OpenCV中的轮廓.ipynb  cv_4_9_2_轮廓特征.ipynb  cv_4_9_3_轮廓属性.ipynb  cv_4_9_4_轮廓属性02.ipynb  cv_4_9_5_轮廓分层.ipynb  main.cpp
ch02/: cv_2_1_图像入门.ipynb  cv_2_2_视频入门.ipynb  cv_2_3_OpenCV中的绘图功能.ipynb  cv_2_4_鼠标作为画笔.ipynb
ch03/: cv_3_1_图像的基本操作.ipynb  cv_3_2_图像上的算术运算.ipynb  cv_3_3_性能衡量和提升技术.ipynb
ch04/: cv_4_10_1_直方图入门.ipynb  cv_4_10_2_直方图均衡.ipynb  cv_4_10_3_二维直方图.ipynb  cv_4_10_4_直方图反投影.ipynb  cv_4_11_傅里叶变换.ipynb  cv_4_12_模板匹配.ipynb  cv_4_13_霍夫线变换.ipynb  cv_4_14_霍夫圈变换.ipynb  cv_4_15_图像分割与分水岭算法.ipynb  cv_4_16_交互式前景提取使用GrabCut算法.ipynb  cv_4_1_改变颜色空间.ipynb  cv_4_2_图像几何变换.ipynb  cv_4_3_图像阈值.ipynb  cv_4_4_图像平滑.ipynb  cv_4_5_形态转换.ipynb  cv_4_6_图像梯度.ipynb  cv_4_7_Canny边缘检测.ipynb  cv_4_8_图像金字塔.ipynb  cv_4_9_1_OpenCV中的轮廓.ipynb  cv_4_9_2_轮廓特征.ipynb  cv_4_9_3_轮廓属性.ipynb  cv_4_9_4_轮廓属性02.ipynb  cv_4_9_5_轮廓分层.ipynb
ch05/: cv_5_10_特征匹配+单应性查找对象.ipynb  cv_5_1_理解特征.ipynb  cv_5_2_哈里斯角检测.ipynb  cv_5_3_Shi-tomas拐角检测器.ipynb  cv_5_4_SIFT(尺度不变特征变换).ipynb  cv_5_5_SURF简介.ipynb  cv_5_6_用于角点检测的FAST算法.ipynb  cv_5_7_BRIEF.ipynb  cv_5_8_ORB.ipynb  cv_5_9_特征匹配.ipynb
ch06/: cv_6_1_视频背景分离.ipynb  cv_6_2_Meanshift和Camshift.ipynb  (+1 more)
(+6 files in other folders)
